New OCC tool occ_proxy.
This command line tool provides interface to OCC
and allows standard shell operations through pipes. It replaces occ_dump
and adds more functionality, like bi-directional communication and
TCP socket capability. Things like these are now possible:

./occ_proxy /dev/occ1 > /tmp/dump.raw
./occ_proxy /dev/occ1 | occ2csv
./occ_proxy /dev/occ1 | nc -l 2000 # Raw buffer transfers don't work nicely with nED on reconnects
./occ_proxy -p 2000 /dev/occ1 # Start transfering packet beginning when client connects

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # Project Specific Files
-occ_dump
+occdiag
+occ_proxy
 occ_rawio
 occ_loopback
+occ_flash
 tools/PacketAnalyzer/PacketAnalyzer
 test_files
 occ_flashprog
@@ -23,8 +25,9 @@ ned/nedApp/src/latex
 *~
 *\#
 
-# CodeBlocks project files
+# IDE project files
 *.layout
+*.tags*
 
 # Temporary files
 *.new
