Put absolute path to occlib in all tools binaries.

--- a/tools/flash/Makefile
+++ b/tools/flash/Makefile
@@ -1,5 +1,4 @@
-ROOT_DIR:=$(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
-OCCLIB=$(ROOT_DIR)/../../lib
+OCCLIB=$(abspath ../../lib)
 CPPFLAGS=-Wall -I$(OCCLIB) -std=c++0x
 LDFLAGS=-L$(OCCLIB) -locc -lrt -Wl,-rpath,$(OCCLIB) -lboost_iostreams
 SRCS=flashprog.cpp
