--- a/tools/OccDiag/Makefile
+++ b/tools/OccDiag/Makefile
@@ -1,4 +1,4 @@
-OCCLIB=$(abspath ../../lib)
+OCCLIB=/home/controls/occ/master/lib
 CPPFLAGS=-Wall -I$(OCCLIB) -std=c++0x -DBITFIELD_LSB_FIRST
 LDFLAGS=-L$(OCCLIB) -locc -Wl,-rpath,$(OCCLIB) -lcurses -lrt
 SRCS=$(wildcard *.cpp)
