Make ROLLOVER_BUF_SIZE configurable through the Makefile, default to 8k

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -2,9 +2,8 @@ CFLAGS=-Wall -I../driver -fPIC
 #CFLAGS+=-DRX_DUMP_PATH="/tmp/occ.dump"
 #CFLAGS+=-DTX_DUMP_PATH="/tmp/occ_tx.dump"
 # Uncomment the next line to support larger packets,
-# default is 8192 bytes. DSP-T max packetsize is ~3600 bytes but
-# DSP before v6.3 allows configurable max packet size.
-#CFLAGS+=-DROLLOVER_BUFFER_SIZE=65536
+# default is 8192 bytes.
+CFLAGS+=-DROLLOVER_BUF_SIZE=131072
 LDFLAGS=-shared -Wl,-soname,lib$(LIBNAME).so
 SRCS=occlib.c i2c.c occlib_drv.c occlib_sock.c
 HDRS=occlib.h occlib_hw.h occlib_drv.h occlib_sock.h
