Allow occ_proxy to build without proper C++11 support
The GCC ver 4.4 that comes with RHEL6 is not fully C++11 compliant.
Make small changes to code to allow build to succeed.

--- a/tools/proxy/Makefile
+++ b/tools/proxy/Makefile
@@ -1,5 +1,5 @@
 OCCLIB=$(abspath ../../lib)
-CPPFLAGS=-Wall -I$(OCCLIB) -std=c++11
+CPPFLAGS=-Wall -I$(OCCLIB) -std=c++0x
 LDFLAGS=-L$(OCCLIB) -locc -lrt -Wl,-rpath,$(OCCLIB)
 SRCS=proxy.cpp
 BIN=occ_proxy
